Redesigned navigation (off canvas on the left, search and share fixed bottom horizontally aligned)

--- a/scss/_st-foundation.scss
+++ b/scss/_st-foundation.scss
@@ -146,12 +146,11 @@ $body-font-family: "Helvetica Neue", "Open Sans", sans-serif;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-$small-range: (0em, 500 / 16 * 1em);
-$medium-range: (501 / 16 * 1em, 768 / 16 * 1em);
-$large-range: (769 / 16 * 1em, 990 / 16 * 1em);
-$large-min-height: 512 / 16 * 1em;
-$xlarge-range: (991 / 16 * 1em, 1300 / 16 * 1em);
-$xxlarge-range: (1301 / 16 * 1em, 99999999em);
+$small-range: (0em, 767 / 16 * 1em);
+$medium-range: (768 / 16 * 1em, 1100 / 16 * 1em);
+$large-range: (1101 / 16 * 1em, 1920 / 16 * 1em);
+// $xlarge-range: (1921 / 16 * 1em, 1300 / 16 * 1em);
+// $xxlarge-range: (1301 / 16 * 1em, 99999999em);
 
 $screen: "only screen";
 
@@ -164,14 +163,14 @@ $small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})";
 $medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})";
 $medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})";
 
-$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})  and (min-height:#{$large-min-height})";
+$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})";
 $large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})";
 
-$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
-$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
+// $xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})";
+// $xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})";
 
-$xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
-$xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
+// $xxlarge-up: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)})";
+// $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (max-width:#{upper-bound($xxlarge-range)})";
 
 // Legacy
 $small: $medium-up;
