--- a/scss/_st-perlovs.scss
+++ b/scss/_st-perlovs.scss
@@ -54,7 +54,7 @@ $tabbar-search-form-font-size: rem-calc(15);
 $tabbar-icon-font-size: $tabbar-height/2;
 
 // Float nav
-$float-nav-offset: rem-calc(15);
+$float-nav-offset: rem-calc(8);
 $float-nav-button-diameter: rem-calc(54);
 $float-nav-button-font-size: rem-calc(38);
 $float-nav-button-icon-color: $white;
@@ -64,7 +64,12 @@ $float-nav-button-transition: bottom 300ms ease;
 $float-nav-button-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
 
 // Off canvas
+$off-canvas-pos: left;
 $off-canvas-transition: transform 500ms ease;
 $off-canvas-menu-shadow-offset-x: rem-calc(3);
-$off-canvas-menu-box-shadow: -$off-canvas-menu-shadow-offset-x 0 rem-calc(5) 0px rgba(0, 0, 0, 0.4);
+$off-canvas-menu-box-shadow: $off-canvas-menu-shadow-offset-x 0 rem-calc(5) 0px rgba(0, 0, 0, 0.4);
 $off-canvas-link-transition: background 500ms ease;
+
+$off-canvas-toggle-offset: 0;
+$off-canvas-toggle-font-size: rem-calc(38);
+$off-canvas-toggle-icon-color: $white;
